Fixed background color on mobile responsive top nav.

--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -964,7 +964,7 @@ $paragraph-line-height: 1.5;
 // $topbar-link-font-size: emCalc(13px);
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: #333;
+$topbar-dropdown-bg: rgb(2,13,48);
 // $topbar-dropdown-link-color: #fff;
 // $topbar-dropdown-toggle-size: 5px;
  $topbar-dropdown-toggle-color: #ccc;
